[gd_scene load_steps=9 format=3 uid="uid://eky3mqmnjgl3"]

[ext_resource type="Script" path="res://scripts/Track.gd" id="1_m1acl"]
[ext_resource type="Texture2D" uid="uid://dyk30b1nt2gvq" path="res://assets/crosstie.png" id="2_qbgkx"]
[ext_resource type="PackedScene" uid="uid://btfdanletw1gi" path="res://prefabs/TrackJunction.tscn" id="3_5bh4n"]
[ext_resource type="PackedScene" uid="uid://iw1demrx5nvt" path="res://prefabs/SignalButton.tscn" id="4_0a5rv"]
[ext_resource type="Texture2D" uid="uid://dlgfnj8p01ym4" path="res://assets/track.png" id="5_ftl6c"]

[sub_resource type="Curve2D" id="Curve2D_asyaa"]
resource_local_to_scene = true
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 56, 0, 0, 0, 0, 0, 64, 0, -19.5338, -20.3622, 19.5338, 20.3622, 108, 20, 0, 0, 0, 0, 128, 64, 0, 0, 0, 0, 128, 72)
}
point_count = 5

[sub_resource type="ArrayMesh" id="ArrayMesh_hmeh0"]
_surfaces = [{
"2d": true,
"aabb": AABB(-1.5, -13.5, 0, 3.00001, 27, 0),
"attribute_data": PackedByteArray(0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 0, 0),
"format": 33558545,
"index_count": 6,
"index_data": PackedByteArray(3, 0, 0, 0, 1, 0, 1, 0, 2, 0, 3, 0),
"primitive": 3,
"vertex_count": 4,
"vertex_data": PackedByteArray(0, 0, 192, 63, 0, 0, 88, 65, 0, 0, 192, 191, 0, 0, 88, 65, 0, 0, 192, 191, 0, 0, 88, 193, 0, 0, 192, 63, 0, 0, 88, 193)
}]

[sub_resource type="MultiMesh" id="MultiMesh_nb77j"]
resource_local_to_scene = true
instance_count = 11
mesh = SubResource("ArrayMesh_hmeh0")
buffer = PackedFloat32Array(0.99968, -0.0253068, 0, 61, 0.0253068, 0.99968, 0, 0, 0.981998, -0.188892, 0, 70.9599, 0.188892, 0.981998, 0, 0.687036, 0.941347, -0.337441, 0, 80.6761, 0.337441, 0.941347, 0, 2.99474, 0.876872, -0.480724, 0, 89.9316, 0.480724, 0.876872, 0, 6.7503, 0.793739, -0.608259, 0, 98.5016, 0.608259, 0.793739, 0, 11.8787, 0.69312, -0.720822, 0, 106.221, 0.720822, 0.69312, 0, 18.2175, 0.588908, -0.8082, 0, 112.866, 0.8082, 0.588908, 0, 25.6776, 0.474599, -0.880202, 0, 118.47, 0.880202, 0.474599, 0, 33.9464, 0.346064, -0.938211, 0, 122.921, 0.938211, 0.346064, 0, 42.8918, 0.210665, -0.977558, 0, 126.088, 0.977558, 0.210665, 0, 52.3694, 0.0339044, -0.999425, 0, 127.831, 0.999425, 0.0339044, 0, 62.2031)

[node name="Track" type="Path2D"]
curve = SubResource("Curve2D_asyaa")
script = ExtResource("1_m1acl")

[node name="Crosstie" type="MeshInstance2D" parent="."]
visible = false
position = Vector2(-50, -50)
mesh = SubResource("ArrayMesh_hmeh0")
texture = ExtResource("2_qbgkx")

[node name="MultiMeshInstance2D" type="MultiMeshInstance2D" parent="."]
z_index = 1
multimesh = SubResource("MultiMesh_nb77j")
texture = ExtResource("2_qbgkx")

[node name="HeadPoint" type="PathFollow2D" parent="."]
position = Vector2(56, 0)
loop = false

[node name="TrackJunction" parent="HeadPoint" instance=ExtResource("3_5bh4n")]
parent = NodePath("../..")
side = 2

[node name="SignalButton" parent="HeadPoint" instance=ExtResource("4_0a5rv")]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -15.0
offset_bottom = 505.0
grow_horizontal = 2
grow_vertical = 2

[node name="TailPoint" type="PathFollow2D" parent="."]
position = Vector2(128, 72)
rotation = 1.5708
progress = 114.805
loop = false

[node name="TrackJunction" parent="TailPoint" instance=ExtResource("3_5bh4n")]
parent = NodePath("../..")
side = 3

[node name="SignalButton" parent="TailPoint" instance=ExtResource("4_0a5rv")]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 15.0
offset_bottom = 535.0
grow_horizontal = 2
grow_vertical = 2
rotation = 1.5708
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TrackLine" type="Line2D" parent="."]
z_index = 2
points = PackedVector2Array(56, 0, 60, 0, 64, 0, 68.1281, 0.261568, 72.7714, 0.95919, 75.5871, 1.55782, 78.6748, 2.36418, 81.9915, 3.40916, 85.4939, 4.72365, 89.1392, 6.33853, 92.8842, 8.2847, 96.6858, 10.593, 100.501, 13.2945, 104.287, 16.4198, 106.155, 18.1511, 108, 20, 109.776, 21.9177, 111.444, 23.8497, 114.468, 27.7368, 117.099, 31.6218, 119.366, 35.4653, 121.294, 39.2279, 122.912, 42.8701, 124.247, 46.3526, 125.325, 49.6358, 126.175, 52.6805, 126.822, 55.4471, 127.622, 59.9884, 128, 64, 128, 68, 128, 72)
width = 20.0
texture = ExtResource("5_ftl6c")
texture_mode = 1

[connection signal="pressed" from="HeadPoint/SignalButton" to="." method="_on_head_signal_button_pressed" flags=18]
[connection signal="pressed" from="TailPoint/SignalButton" to="." method="_on_tail_signal_button_pressed" flags=18]
